--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@lucide/svelte": "^0.482.0",
+		"@lucide/svelte": "^0.511.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -31,7 +31,7 @@
 		"@types/node": "^22",
 		"bits-ui": "^1.5.3",
 		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.30.2",
+		"drizzle-kit": "^0.31.1",
 		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -50,7 +50,7 @@
 		"svelte-sonner": "^1.0.1",
 		"sveltekit-superforms": "^2.25.0",
 		"tailwind-merge": "^3.3.0",
-		"tailwind-variants": "^0.2.1",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.0.0",
@@ -59,9 +59,18 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@langchain/core": "^0.3.57",
 		"@langchain/google-genai": "^0.2.9",
 		"better-sqlite3": "^11.8.0",
-		"drizzle-orm": "^0.40.0"
+		"drizzle-orm": "^0.43.1",
+		"rehype-sanitize": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.2",
+		"runed": "^0.28.0",
+		"svelte-inspect-value": "^0.7.2",
+		"unified": "^11.0.5",
+		"zod": "^3.25.28"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
