basic tool interaction with vikunja to get my tasks

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-GOOGLE_API_KEY=<my_google_api_key>
 DATABASE_URL=<my_database_url>
-
+GOOGLE_API_KEY=<my_google_api_key>
+VIKUNJA_URL=https://my.vikunja.instance
+VIKUNJA_API_KEY=<my_vikunja_api_key>
