moved vikunja files

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,18 @@
-DATABASE_URL=<my_database_url>
-GOOGLE_API_KEY=<my_google_api_key>
-VIKUNJA_URL=https://my.vikunja.instance
-VIKUNJA_API_KEY=<my_vikunja_api_key>
+# May need to change the UID and GID based on your system
+# this will affect the volume file permissions
+UID=1000 # based on user id in your system, can be found with `id -u`
+GID=1000 # based on group id in your system, can be found with `id -g`
+
+# API keys for llms
+GOOGLE_API_KEY= # Your Goolge API key for Gemini
+
+# Vikunja service 
+VIKUNJA_URL=http://127.0.0.1:3456
+VIKUNJA_API_KEY=tk_99d0ddb202aef1707d7fa67486f31e989c8e660b
+
+# Vikunja container settings
+VIKUNJA_SERVICE_JWTSECRET=asupersecurerandomsecret
+VIKUNJA_DATABASE_PATH=/db/vikunja.db
+
+# database for LLM conversation persistance -- not implemented
+DATABASE_URL=local.dbcounter
