use local llm gemma

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
+		"start": "pnpm run dev",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -15,7 +16,7 @@
 		"vikunja:up": "docker compose up -d",
 		"vikunja:down": "docker compose down",
 		"vikunja:logs": "docker compose logs vikunja",
-		"vikunja:logs:watch": "docker compose logs -f vikunja", 
+		"vikunja:logs:watch": "docker compose logs -f vikunja",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio"
@@ -64,9 +65,11 @@
 		"vite-plugin-devtools-json": "^0.1.0"
 	},
 	"dependencies": {
-		"@langchain/core": "^0.3.57",
+		"@langchain/core": "^0.3.58",
 		"@langchain/google-genai": "^0.2.9",
+		"@langchain/google-vertexai": "^0.2.12",
 		"@langchain/langgraph": "^0.2.73",
+		"@langchain/openai": "^0.5.13",
 		"better-sqlite3": "^11.8.0",
 		"drizzle-orm": "^0.43.1",
 		"node-vikunja": "^0.3.0",
